<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>ca.bc.gov.hlth</groupId>
	<artifactId>pbf-data-loader</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>pbf-data-loader</name>
	<description>PBF Data Loader</description>
	<properties>
		<java.version>11</java.version>
		<jarName>pbf-data-loader</jarName>
		<start-class>ca.bc.gov.hlth.pbfdataloader.PbfDataLoaderApplication</start-class>
	</properties>
	<dependencies>
		<!-- Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-batch</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<!-- PostgreSQL -->
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		</dependency> 
		
		 		
 		<!-- Apache Commons -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.11.0</version>
		</dependency>
		
		<!-- SFTP -->
		<dependency>
		  	<groupId>com.hierynomus</groupId>
		  	<artifactId>sshj</artifactId>
		  	<version>0.32.0</version>
		  	 <exclusions>
          <exclusion>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
          </exclusion>
        </exclusions>
		</dependency>
		
		<!-- PGP -->
	    <dependency>
	        <groupId>org.pgpainless</groupId>
	        <artifactId>pgpainless-sop</artifactId>
	        <version>1.3.5</version>
	    </dependency>

		<!-- Unit Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.batch</groupId>
			<artifactId>spring-batch-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-inline</artifactId>
    		<scope>test</scope>
		</dependency>		
	</dependencies>

	<build>
		<plugins>
			<plugin>
			<artifactId>maven-assembly-plugin</artifactId>
			<configuration>
				<finalName>${jarName}</finalName>
				<appendAssemblyId>false</appendAssemblyId>
				<archive>
					<manifest>
						<mainClass>ca.bc.gov.hlth.pbfdataloader.PbfDataLoaderApplication</mainClass>
					</manifest>
				</archive>
				<descriptorRefs>
					<descriptorRef>jar-with-dependencies</descriptorRef>
				</descriptorRefs>
			</configuration>
			<executions>
				<execution>
				<id>make-assembly</id> <!-- this is used for inheritance merges -->
				<phase>package</phase> <!-- bind to the packaging phase -->
				<goals>
					<goal>single</goal>
				</goals>
				</execution>
			</executions>
			</plugin>
		</plugins>
	</build>

</project>
